# -IntroductionToCgExp

./: README.md
B-Spline/: Bspline.hpp  CMakeLists.txt  DrawLine.hpp  DrawRound.hpp  Point.hpp  README.md  main.cpp
MeshParameterization/: CMakeLists.txt  Edge.h  IO.h  Mesh.h  README.md  main.cpp  stl_parser.h
MeshParameterization/Model/: arma.1.mesh  armadillo_hex.mesh  cube_tet.mesh  cuboid_hex.vtk  hanger.mesh  hexdom.mesh  impeller.mesh  rocker.off  sphere_hex.vtk
surfacefairing/: CMakeLists.txt  Cell.h  Face.h  Mesh.cpp  README.md  Vertex.h  main.cpp
